@@ -12,6 +12,10 @@
   <artifactId>pentaho-scheduler-core</artifactId>
   <version>10.2.0.0-SNAPSHOT</version>
 
+  <properties>
+    <maven-surefire-plugin.argLine> --add-opens=java.base/java.lang=ALL-UNNAMED </maven-surefire-plugin.argLine>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.quartz-scheduler</groupId>
